# CanSig-integration

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/cansig_integration/: __init__.py
src/cansig_integration/integration/: _CONSTANTS.py  model.py
src/cansig_integration/integration/base/: model.py
src/cansig_integration/integration/data/: datasplitter.py
src/cansig_integration/integration/module/: batcheffectvae.py  cnvvae.py  vae.py
src/cansig_integration/integration/training/: runner.py  trainer.py  training_plan.py
