[metadata]
name = cansig_integration
version = 0.0.1
platform = any
url = https://github.com/BoevaLab/CanSig_integration
description = Discovering de novo shared transcriptional programs in single cancer cells
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.8
install_requires =
    anndata
    numpy
    pandas    
    petname
    pydantic
    scanpy>=1.9.1
    scvi-tools>=0.20.0

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    scikit-learn

